--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -30,3 +30,7 @@ Added: additional warning in tooltip to explain that XP is dependent on the pers
 [ 1/6/24 hotfix2 ]
 Hotfix: UltimateXPTweaker compatibility patch.
 [ ------ ]
+
+[ 1/6/24 hotfix3 ]
+Hotfix: Fix issues with sandbox options not working, hide skills/recipes if sandbox doesn't allow them.
+[ ------ ]
