--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -43,3 +43,9 @@ Fix: Cannot read skills if the sandbox option is toggled off.
 [ 1/19/24 ]
 Fix: Recipes are now impacted by transcribe/read sandbox multipliers.
 [ ------ ]
+
+[ 5/18/24 ]
+New: Tracks zombie and survivor kills, toggle via sandbox options, default off.
+Tweak: The sandbox options per skill category have been converted from true/false to 0-100 %.
+Add: Logging for 'stop' reading.
+[ ------ ]
