--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -45,7 +45,7 @@ Fix: Recipes are now impacted by transcribe/read sandbox multipliers.
 [ ------ ]
 
 [ 5/18/24 ]
-New: Tracks zombie and survivor kills, toggle via sandbox options, default off.
-Tweak: The sandbox options per skill category have been converted from true/false to 0-100 %.
-Add: Logging for 'stop' reading.
+New: Tracks zombie and survivor kills, toggle via sandbox options. (0 to 100 %, default 0%)
+Tweak: The sandbox options per skill category have been converted from true/false to (-1) to 100 %. -1 defaults the % to the general option.
+Add: Logging for 'stop' reading events.
 [ ------ ]
