--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -50,3 +50,7 @@ Tweak: The sandbox options per skill category have been converted from true/fals
 Add: Logging for 'stop' reading events.
 Fix: Allowing for modded skills to be disabled if the mod is removed.
 [ ------ ]
+
+[ 6/8/24 ]
+Fix: Passive Skills setting default set back to 0 (Shouldn't have been -1).
+[ ------ ]
