--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -62,5 +62,5 @@ Fix: Check for transcribing Survivor Kills in general.
 
 [ 8/14/24 ]
 Fix: Fitness/Weight conflict. The game will prevent gaining fitness XP if you're severely underweight - this caused issues where you could not recover your fitness back. Now you will need to regain some weight before continuing to read your journal.
-
+Fix: Removed the 'All' option in transcribe.
 [ ------ ]
