--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -70,14 +70,8 @@ Tweak/Fix: Changed how the recovery on kills is processed.
 Hotfix: Edge case with context overrides.
 [ ------ ]
 
-[ 10/-/24 ]
+[ 11/3/24 ]
 Fix halo messages overlapping (MassCraxx)
 Changed `JournalCraft` sandbox option to `JournalCraftRecipe` - which takes a string and creates a recipe for crafting.
-[ ------ ]
-
-[ TODO ]
-- ModData Support
-    - option SkillRecoveryJournal.CraftRecipe
-      {type = string, default = , page = SkillRecoveryJournal, translation = SkillRecoveryJournal_CraftRecipe,}
-
+Added new option for mod-data support. Warning, these feature operates with a full overwrite.
 [ ------ ]
