--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -71,7 +71,7 @@ Hotfix: Edge case with context overrides.
 [ ------ ]
 
 [ 11/3/24 ]
-Fix halo messages overlapping (MassCraxx)
+Added % progress to reading/writing (MassCraxx)
 Changed `JournalCraft` sandbox option to `JournalCraftRecipe` - which takes a string and creates a recipe for crafting.
 Added new option for mod-data support. Warning, these feature operates with a full overwrite.
 [ ------ ]
