--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -73,5 +73,5 @@ Hotfix: Edge case with context overrides.
 [ 11/3/24 ]
 Added % progress to reading/writing (MassCraxx)
 Changed `JournalCraft` sandbox option to `JournalCraftRecipe` - which takes a string and creates a recipe for crafting.
-Added new option for mod-data support. Warning, these feature operates with a full overwrite.
+Added new option for mod-data support. Warning, this feature operates with a full overwrite.
 [ ------ ]
