--- a/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/media/ChangeLog.txt
@@ -71,8 +71,9 @@ Hotfix: Edge case with context overrides.
 [ ------ ]
 
 [ 11/3/24 ]
-Added % progress to reading/writing (MassCraxx)
+- Added % progress to reading/writing (MassCraxx)
 Changed `JournalCraft` sandbox option to `JournalCraftRecipe`
 - Which takes a string and creates a recipe for crafting.
 Added new option for mod-data support. Warning, this feature operates with a full overwrite.
+- German Translation (credit to EagleFire).
 [ ------ ]
