--- a/Contents/mods/Skill Recovery Journal/common/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/common/ChangeLog.txt
@@ -106,3 +106,7 @@ link1 = Chuck's Kofi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.co
 link2 = Workshop = https://steamcommunity.com/id/Chuckleberry_Finn/myworkshopfiles/?appid=108600,
 link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn,
 [ ------ ]
+
+[ 1/24/25 ]
+Fix tooltip render issue with fluid transferring.
+[ ------ ]
