Updated/fixed encodings for several languages.

--- a/Contents/mods/Skill Recovery Journal/common/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/common/ChangeLog.txt
@@ -109,4 +109,5 @@ link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chu
 
 [ 1/24/25 ]
 Fix tooltip render issue with fluid transferring.
+Updated/fixed encodings for several languages.
 [ ------ ]
