--- a/Contents/mods/Skill Recovery Journal/common/ChangeLog.txt
+++ b/Contents/mods/Skill Recovery Journal/common/ChangeLog.txt
@@ -115,3 +115,7 @@ Updated/fixed encodings for several languages.
 [ 2/13/25 ]
 Fixed Halotext bug caused by changes in B42.3.3
 [ ------ ]
+
+[ 2/16/25 ]
+Added additional debug messages for recipe generation.
+[ ------ ]
